# fourfront

./: .babelrc  .buildinfo  .coverage.TecRef-LT-6245C3.41350.977802  .coverage.TecRef-LT-6245C3.41351.829265  .dockerignore  .esdoc.json  .eslintignore  .eslintrc.js  .eslintrc.json  .flake8  .flowconfig  .gitignore  .hound.yml  .travis.yml  .travis.yml.old  CHANGELOG.rst  Dockerfile  Makefile  README.html  README.md.tmp  README.rst  Testing_Locally.ipynb  authentication.html  babel.config.cjs  babel.config.js  base.ini  beanstalk-deployment.html  beanstalk.cfg  bootstrap.py  buildout-travis.cfg  buildout.cfg  buildout.cfg.DISABLED  buildspec.yml  candidate.cfg  cloud-config.yml  config.rb  conftest.py  cypress-travis.json  cypress.json  database.html  (+53 more)
.doctrees/: README.doctree  authentication.doctree  beanstalk-deployment.doctree  database.doctree  environment.pickle  index.doctree  invalidation.doctree  object-lifecycle.doctree  overview.doctree  static_documentation_contents.doctree
.doctrees/jsdoc/: ItemHeader.doctree  ItemStore.doctree  Legend.Field.doctree  Legend.Term.doctree  index.doctree  lib_store.ItemStore.doctree  lib_store.module.exports.ItemStore.doctree  module-%257BReact%2520Component%257D%2520viz_QuickInfoBar.doctree  module-alerts.doctree  module-alerts.statics.doctree  module-app-Timeout.Timeout.doctree  module-app-Timeout.doctree  module-app.doctree  module-collection-Collection.doctree  module-collection-Table.doctree  module-collection.Cell.Cell.doctree  module-collection.Cell.doctree  (+95 more)
.ebextensions/: 00_set_wsgi.config  01_apache.config  01_packages.config  01_set_timeout.config  02_logging.config  02_packages.config  04_upgrade_mod_wsgi.config  05_set_wsgi.config  11_logs.config  12_daily_restart.config  12_mercurial.config  13_install_node.config  13_run_npm.config  20_packages.config  24_upgrade_mod_wsgi.config  25_set_wsgi.config  99_after_deploy.config  cloudwatch.config  encoded-apache.conf  encoded-apache.conf.bak  wsgi.conf
.elasticbeanstalk/: .gitignore  config.yml
.github/: dependabot.yml
_modules/: encoded.html  index.html
_sources/: beanstalk-deployment.md.txt  index.rst.txt  static_documentation_contents.rst.txt
_static/: classic.css
checkfiles/: deploy.py
deploy/: deploy_beanstalk.py  elasticsearch.yml  generate_buildout_cfg.py  generate_production_ini.py  last_git_commit.py  run_cypress_tests_on_travis.sh  run_python_unit_tests_on_travis.sh  set_beanstalk_config.py  snovault_tables_only.sql  tests.py  travis_after_all.py  wsgi.conf
docs/: apache_wsgi.rst  auth.rst  aws-deployment.rst  beanstalk-deployment.md  beanstalk-deployment_BACKUP_44374.md  beanstalk-deployment_LOCAL_44374.md  database.md  database.rst  higlass-visualization.md  inserts.md  local_deployment_troubleshooting.md  locust.rst  overview.rst  rev-links.rst  security.md  static-pages.md  static-pages.rst  unittest.md
etc/: encoded-apache.conf
examples/: s3cp.py  submit_file.py
jest/: environment.js
jsdoc/: ItemHeader.html  ItemStore.html  Legend.Field.html  Legend.Term.html  index.html  lib_store.ItemStore.html  lib_store.module.exports.ItemStore.html  module-%257BReact%2520Component%257D%2520viz_QuickInfoBar.html  module-alerts.html  module-alerts.statics.html  module-app-Timeout.Timeout.html  module-app-Timeout.html  module-app.html  module-collection-Collection.html  module-collection-Table.html  module-collection.Cell.Cell.html  module-collection.Cell.html  module-collection.Collection.html  module-collection.Data.Data.html  module-collection.Data.html  module-collection.Row.Row.html  module-collection.Row.html  module-collection.Table.html  module-collection.html  module-footer.html  module-item-pages_components.ExternalReferenceLink.html  module-item-pages_components.FilesInSetTable.FileItemRow.html  module-item-pages_components.FilesInSetTable.LabIcon.html  module-item-pages_components.FilesInSetTable.Small.html  module-item-pages_components.FilesInSetTable.SubmitterLink.html  module-item-pages_components.FilesInSetTable.html  module-item-pages_components.FilesInSetTable.statics.html  module-item-pages_components.FormattedInfoBlock.FormattedInfoBlockList.html  module-item-pages_components.FormattedInfoBlock.html  module-item-pages_components.ItemFooterRow.html  module-item-pages_components.ItemHeader.BottomRow.html  module-item-pages_components.ItemHeader.MiddleRow.html  module-item-pages_components.ItemHeader.TopRow.html  module-item-pages_components.ItemHeader.Wrapper.html  module-item-pages_components.ItemHeader.html  (+72 more)
old_stuff/: cloud-config.yml
parts/: README.rst
pydoc/: encoded.audit.biosample.html  encoded.audit.conditions.html  encoded.audit.dataset.html  encoded.audit.experiment.html  encoded.audit.gtex_data.html  encoded.audit.html  encoded.audit.item.html  encoded.audit.ontology_data.html  encoded.audit.replicate_set.html  encoded.audit.standards_data.html  encoded.authentication.html  encoded.authorization.html  encoded.batch_download.html  encoded.commands.add_date_created.html  encoded.commands.aws_deploy.html  encoded.commands.check_rendering.html  encoded.commands.deploy.html  encoded.commands.dropdb.html  encoded.commands.es_index_data.html  encoded.commands.extract_test_data.html  encoded.commands.generate_annotations.html  encoded.commands.generate_ontology.html  encoded.commands.html  encoded.commands.import_data.html  encoded.commands.index_annotations.html  encoded.commands.jsonld_rdf.html  encoded.commands.load_data.html  encoded.commands.migrate_attachments_aws.html  encoded.commands.migrate_dataset_type.html  encoded.commands.migrate_files_aws.html  encoded.commands.owltools.html  encoded.commands.profile.html  encoded.commands.spreadsheet_to_json.html  encoded.edw_hash.html  encoded.html  encoded.loadxl.html  encoded.memlimit.html  encoded.peak_indexer.html  encoded.region_search.html  encoded.renderers.html  (+92 more)
scripts/: build-docker-test  debug-docker-local  ecr-test-login  fix-dist-info  kibana-start  kibana-stop  psql-start  submit_file.py
workflow_generator/: cwl2workflow.py  readme  txt2software.py
(+2026 files in other folders)
